# Battleships

./: AI_boards.h  CMakeLists.txt  constants.h  error.h  game.c  game.h  interactions.c  interactions.h  main.c  player.c  player.h  printGUI.c  printGUI.h  ship.c  ship.h
game/: boards.c  boards.h  constants.h  coordinate.c  coordinate.h  error.h  game.c  game.h  interactions.c  interactions.h  main.c  my_tests.c  my_tests.h  player.c  player.h  print.c  print.h  print_GUI.c  print_GUI.h  ship.c  ship.h  utils.c  utils.h
